- fix text-alignment issue for smaller screens - decreased margin-bottom for each listitem - decreased the height of each list item - decreased the font size from 20px to 18px - decreased the font weight from 600/500 to 500/400

--- a/src/styles/LandingPage.css
+++ b/src/styles/LandingPage.css
@@ -330,8 +330,8 @@ footer.Container {
 }
 
 .FAQ .ListItem {
-  padding: 24px;
-  margin-bottom: 24px;
+  padding: 20px 24px;
+  margin-bottom: 16px;
 
   background: rgba(255, 255, 255, 0.05);
   border-bottom: 2px solid #B1B6D4;
